Update and rename ex4_2.html to 404.html

--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@
         <input type="reset" value="Apagar valores">
     </form>
     <h3></h3>
-    <script src="index/js/ex4_2.js"></script>
+    <script src="ex4_2.js"></script>
 </body>
 
 </html>
